--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         
         <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
         <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+        <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
         <!-- Add the js file where you wrote the react code-->
         <script src="index.pack.js"></script>
     </body>
