--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
         <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
         <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
         <!-- Add the js file where you wrote the react code-->
-        <script type='module' src="index.pack.js"></script>
+        <script src="index.pack.js"></script>
     </body>
 </html>
