--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
    
         <!-- Add the js file where you wrote the react code-->
-        <script type="text/babel" src="index.js"></script>
+        <script type="text/babel" src="./index.js"></script>
     </body>
 </html>
